[tool.poetry]
name = "kirin"
version = "0.1.0"
description = ""
authors = ["ByeRON <disce.uno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
black = "^20.8b1"
isort = "^5.6.4"
retry = "^0.9.2"
aiohttp = "^3.7.3"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
